# challenge-ml

./: .env-example  .gitignore  README.md  audio_captcha_solution.csv  image_captcha_solution.csv  insights.csv  products.csv  pyproject.toml  superfinanciera.csv
src/: start.py
src/browser/: captcha.py  generic_scraper.py  generic_scrapper.py  superfinanciera_scraper.py  superfinanciera_scrapper.py
src/browser/provider/: generic_browser_provider.py
src/browser/scrapers/: default_scraper.py
src/browser/scrapers/configs/: amazon.json  superfinanciera.json  tjsc.json  trf4.json
src/browser/scrappers/: amazon.json  default_scrapper.py  product.py  superfinanciera.json
src/request/: generic_scraper.py
src/request/scrapers/: amazon.json  default_scraper.py
src/tools/: csv_handler.py
