[tool.poetry]
name = "web-scraper-ml"
version = "0.1.0"
description = ""
authors = ["marcelovb <marcelovillasboas@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.19.0"
beautifulsoup4 = "4.12.3"
pandas = "2.2.2"
pdfplumber = "^0.11.2"
pytesseract = "^0.3.10"
requests = "^2.32.3"
2captcha-python = "^1.2.8"
openai = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
